--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "react": "^16.12.0",
@@ -15,6 +16,7 @@
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
     "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
